--- a/src/components/App/Header/LoginForm/LoginForm.module.scss
+++ b/src/components/App/Header/LoginForm/LoginForm.module.scss
@@ -23,3 +23,14 @@
 .passwordInput, .loginInput{
     width: 150px;
 }
+.error{
+    position:absolute;
+    
+    top:50%;
+    text-align:center;    
+    padding:50px;
+    border:3px solid red;
+    color:red;
+    font-size:24px;
+
+}
