--- a/src/components/App/Header/AddForm/AddForm.module.scss
+++ b/src/components/App/Header/AddForm/AddForm.module.scss
@@ -12,7 +12,14 @@
     justify-content: center;
     align-items: center;
 }
-.date{
-    width: 100px;
+@media (max-width: 1050px){
+    .greeting{
+        position: relative;  
+    }
+    .addForm{
+        flex-direction: column;
+        justify-content: space-around;
+    }
 }
+
 
