--- a/src/components/App/Header/LoginForm/LoginForm.module.scss
+++ b/src/components/App/Header/LoginForm/LoginForm.module.scss
@@ -24,8 +24,7 @@
     width: 150px;
 }
 .error{
-    position:absolute;
-    
+    position:absolute;    
     top:50%;
     text-align:center;    
     padding:50px;
@@ -33,4 +32,13 @@
     color:red;
     font-size:24px;
 
+}
+.userAddError{
+    position:absolute;    
+    top:50%;
+    text-align:center;    
+    padding:50px;
+    border:3px solid green;
+    color:green;
+    font-size:24px;
 }
